--- a/adressbook_web_tests/build.gradle
+++ b/adressbook_web_tests/build.gradle
@@ -16,11 +16,17 @@ dependencies {
     testImplementation 'org.seleniumhq.selenium:selenium-java:4.38.0'
     implementation 'org.jcommander:jcommander:3.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.0'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.0'
 }
 
 test {
     useJUnitPlatform()
     if (project.hasProperty("browser")){
         systemProperty("browser", project.property("browser"))
+    }
+
+    if (project.hasProperty("target")){
+        systemProperty("target", project.property("target"))
     }
 }
