Правка условий для формата файла генератора

--- a/adressbook_web_tests/groups.yaml
+++ b/adressbook_web_tests/groups.yaml
@@ -4,10 +4,10 @@
   header: ""
   footer: ""
 - id: ""
-  name: "tifdaqztdz"
-  header: "ufjreeatyh"
-  footer: "ynjnbqtgxw"
+  name: "rojcwdjjwf"
+  header: "yoaugwdlrb"
+  footer: "pjwqlbtmro"
 - id: ""
-  name: "fpmgixntmjxsjyagcyqi"
-  header: "hudbdvvgvlfiocorrddd"
-  footer: "aoyzcgohadjvysyufxmt"
+  name: "nardlqbjwxuyfyxsakag"
+  header: "zoxnswrgfxdjakutrroj"
+  footer: "weuprgycmakcadrqthig"
